--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-bezier",
-  "version": "1.0.10",
+  "version": "1.10.0",
   "description": "My new Nuxt module",
   "repository": "@noction/nuxt-bezier",
   "license": "MIT",
@@ -22,16 +22,17 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run lint && npm run test && npm run prepack && sheep release -b main",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@noction/vue-bezier": "^1.0.9",
+    "@noction/vue-bezier": "^1.10.0",
     "@nuxt/kit": "^3.9.0"
   },
   "devDependencies": {
+    "@akryum/sheep": "^0.5.0",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
