--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,25 +1,26 @@
-name: Create release
+name: Release
+
+permissions:
+  contents: write
 
 on:
   push:
     tags:
-      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
-  workflow_dispatch:
+      - 'v*'
 
 jobs:
-  build:
-    name: Create Release
+  release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@master
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Fetch all tags
+          fetch-depth: 0
 
-      - name: Create Release for Tag
-        id: release_tag
-        uses: Akryum/release-tag@v4.0.7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/setup-node@v3
         with:
-          tag_name: ${{ github.ref }}
+          node-version: 20.x
+
+      - run: npx changelogithub
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
