--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen",
+    "release": "npm run lint && npm run test && npm run prepack && bumpp package.json playground/package.json --commit --push --tag",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch"
@@ -50,6 +50,7 @@
     "@nuxt/schema": "^3.9.0",
     "@nuxt/test-utils": "^3.9.0",
     "@types/node": "^20.10.5",
+    "bumpp": "^9.2.1",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
     "nuxt": "^3.9.0",
