--- a/package.json
+++ b/package.json
@@ -40,20 +40,21 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@noction/vue-bezier": "^1.11.2",
-    "@nuxt/kit": "^3.10.1"
+    "@noction/vue-bezier": "^1.12.0",
+    "@nuxt/kit": "^3.12.4"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.10.1",
-    "@nuxt/test-utils": "^3.11.0",
-    "@types/node": "^20.11.17",
-    "bumpp": "^9.3.0",
+    "@nuxt/devtools": "^1.3.9",
+    "@nuxt/eslint-config": "^0.4.0",
+    "@nuxt/module-builder": "^0.8.1",
+    "@nuxt/schema": "^3.12.4",
+    "@nuxt/test-utils": "^3.14.0",
+    "@types/node": "^22.1.0",
+    "bumpp": "^9.4.2",
     "changelogen": "^0.5.5",
-    "eslint": "^8.56.0",
-    "nuxt": "^3.10.1",
-    "vitest": "^1.2.2"
-  }
+    "eslint": "^9.8.0",
+    "nuxt": "^3.12.4",
+    "vitest": "^2.0.5"
+  },
+  "packageManager": "pnpm@8.15.9"
 }
