--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-bezier",
-  "version": "1.12.0",
+  "version": "2.0.0-beta.1",
   "description": "Nuxt reusable transition components",
   "author": {
     "name": "50rayn",
