--- a/playground/package.json
+++ b/playground/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "nuxt-bezier-playground",
-  "version": "1.11.0",
+  "version": "2.0.0-beta.1",
   "type": "module",
   "scripts": {
     "dev": "nuxi dev --host 0.0.0.0",
