--- a/playground/package.json
+++ b/playground/package.json
@@ -9,8 +9,8 @@
     "generate": "nuxi generate"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^3.1.3",
-    "nuxt": "latest",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "nuxt": "^3.15.4",
     "shikiji": "^0.10.2"
   },
   "dependencies": {
