--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "changelogen": "^0.6.0",
     "eslint": "^9.21.0",
     "nuxt": "^3.15.4",
-    "vitest": "^3.0.7"
+    "vitest": "^3.0.7",
+    "typescript": "~5.6.3"
   },
   "packageManager": "pnpm@10.5.2"
 }
